--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Resek",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.16.0",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
