--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "ejs": "^2.5.5",
     "express": "^4.14.1",
     "express-sanitizer": "^1.0.2",
+    "express-session": "^1.15.2",
     "method-override": "^2.3.7",
-    "mongoose": "^4.8.1"
+    "mongoose": "^4.8.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   }
 }
