--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.16.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
     "express-sanitizer": "^1.0.2",
